--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 
 				<div class="contactbox">
-				<p>Twitter: <br><a href="@mstrinhpham">@mstrinhpham</a></p>
+				<p>Twitter: <br><a href="https://twitter.com/mstrinhpham">@mstrinhpham</a></p>
 				</div>
 
 				<div class="contactbox">
